<resources>
    <string name="app_name">Smart Serve</string>
    <string name="app_Diet">Diet Plan</string>
    <string name="app_Imm">Immunity Booster</string>
    <string name="app_Med">Meditation Videos</string>
    <string name="app_Cov">Covid-19 Experience</string>
    <string name="app_HomeRe">Home Remedies</string>
    <string name="app_Home">Home</string>
    <string name="app_Health">Health Safety</string>
    <string name="app_Emer">Emergency Serv</string>
    <string name="app_Local">Covid Dashboard</string>
    <string name="home_second">Home Second</string>
    <string name="language">language</string>
    <string name="app_playnxtbtn">Play Next</string>
    <string name="app_heplline">HelpLine</string>
    <string name="app_statelist">Choose State</string>
    <string name="app_helpnotext">State Helpline number</string>
    <string name="app_helpemailtxt">State Helpline email</string>
    <string name="app_helptollfree">Toll Free</string>
    <string name="app_helpCent">Central Helpline number</string>
    <string name="app_covidhosp">Covid Hospitals</string>
    <string name="app_selectcity">Choose City</string>
    <string name="app_hosname">Hospital Name</string>
    <string name="app_hoscity">City</string>
    <string name="app_hosowner">Owned by</string>
    <string name="app_hosbeds">No of Beds</string>
    <string name="app_totdeces">Deceased</string>
    <string name="app_totcovid">TotalCases</string>
    <string name="app_torecov">Recovered</string>
    <string name="app_totactive">Active</string>
    <string name="app_homehealth">"HEALTH SAFETY \n\nYour Guide to Fight Covid-19 Watch out here for more videos on \n *Diet plan \n *Immunity Booster \n *Home Made Remedies "</string>
    <string name="app_homeemerlink">EMERGENCY SERVICES \n\nEmergency services and other important facilities in your area.\nAll the contact information in one place. Including:\n *Govt. helplines \n*COVID hospitals\n*Ambulance services\n*COVID test labs\n*Local NGOs\n</string>
    <string name="app_homelocallink">LOCAL COMMUNITY \n *Coming soon</string>
    <string name="app_homeotherlink">"OTHERS:\n "</string>
    <string name="app_districtName">DistrictName</string>
    <string name="app_selectdistrict">Choose District</string>
    <string name="app_covidlabs">Covid Test Labs</string>
    <string name="app_ambulan">Ambulance Services</string>
    <string name="app_labname">Lab Name</string>
    <string name="app_labcontact">Contact</string>
    <string name="app_statename">State Name</string>
    <string name="app_ambcontact">Ambulance Contact</string>
    <string name="app_terms">Terms and Conditions</string>
    <string name="app_privacy">Privacy Policy</string>
    <string name="app_disclaimer">Disclaimer</string>
    <string name="app_networkmsg" translatable="false">Please Switch on Internet and restart the app</string>
    <string name="app_statedata">State Data</string>
    <string name="app_indiadata">Overall India</string>
    <string name="app_districtwise">District Data</string>
    <string name="app_NotTitle">SmartServe Notification</string>
    <string name="app_Notmsg">Dont forget to Wash your Hands, Always use Mask, Keep Social Distancing</string>
    <string name="app_vaccinename">Vaccine Name</string>
    <string name="app_vacorg">Organisation</string>
    <string name="app_curphase">Current Phase</string>
    <string name="app_comPhase">CompletedPhase</string>
    <string name="app_Lstdate">Updated Date</string>
    <string name="app_vaclink">Get the latest Vaccine Status across the globe</string>
    <string name="app_chooselang">Select Language</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_settings">Settings</string>
    <string name="app_userage">Age</string>
    <string name="app_notsettings">"Notification Settings "</string>
    <string name="app_requirednot">Notification</string>
    <string name="app_notimins">Notification Interval (in Mins)</string>
    <string name="app_contact">Contact us</string>


</resources>