<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableRow  android:layout_width="match_parent"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/txtappname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_chooselang"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#214f75" />

            <Spinner
                android:id="@+id/spnlng"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </TableRow>

    </LinearLayout>

    <include
        layout="@layout/top_menu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    <include layout="@layout/emergency_menu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:paddingTop="-5dp">

        <TextView
            android:id="@+id/statehosdplbl"
            android:layout_width="169dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_statelist"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Spinner
            android:id="@+id/dphosstate"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:paddingTop="-5dp">

        <TextView
            android:id="@+id/cityhosdblbl"
            android:layout_width="169dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_selectcity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Spinner
            android:id="@+id/dphoscity"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txthosname"
                android:layout_width="125dp"
                android:layout_height="52dp"
                android:background="@color/recoverheadcolor"
                android:gravity="center"
                android:text="@string/app_hosname"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txthoscity"
                android:layout_width="64dp"
                android:layout_height="52dp"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:text="@string/app_hoscity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txtowner"
                android:layout_width="64dp"
                android:layout_height="52dp"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:text="@string/app_hosowner"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txtbeds"
                android:layout_width="64dp"
                android:layout_height="54dp"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:text="@string/app_hosbeds"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <GridView
                android:id="@+id/gvcovidhosp"
                android:layout_width="match_parent"
                android:layout_height="359dp"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:numColumns="1"
                android:stretchMode="columnWidth" />
        </TableRow>

    </RelativeLayout>
    <include layout="@layout/bottomdisclaimmenu"
        android:layout_gravity="center|bottom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>
