<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Scroll1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_chooselang"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#214f75"  />

            <Spinner
                android:id="@+id/dpvaclangu"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </TableRow>

        <include layout="@layout/top_menu" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="593dp"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtlblvacname"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:background="@color/recoverheadcolor"
                    android:gravity="center"
                    android:text="@string/app_vaccinename"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txtlblorg"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/textborder"
                    android:gravity="center"
                    android:text="@string/app_vacorg"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txtlblcurrphase"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/textborder"
                    android:gravity="center"
                    android:text="@string/app_curphase"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txtlbldate"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/textborder"
                    android:gravity="center"
                    android:text="@string/app_Lstdate"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="441dp"
                android:gravity="center"
                android:layout_marginTop="49dp"
                android:orientation="horizontal">


                <GridView
                    android:id="@+id/gvcovidvaccine"
                    android:layout_width="wrap_content"
                    android:layout_height="437dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:numColumns="1"
                    android:stretchMode="columnWidth" />
            </TableRow>
        </RelativeLayout>
        <include layout="@layout/bottomdisclaimmenu"
            android:layout_gravity="center|bottom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

</ScrollView>